# searching_algorithms

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: boyer_moore.h  brute_force.h
src/: boyer_moore.cpp  brute_force.cpp
test_data/: largeText.txt  smallText.txt
